# ggcat-test-benchmarks

./: .gitignore  Cargo.toml  README.md  aurinko-run-benchmarks.sh  aurinko-single-run-test-g.sh  aurinko-slurm-article-tests.sh  aurinko-slurm-test-g.sh  bench-settings.toml  child-slurm-script.sh  hdd-bench.sh  htz-run-benchmarks.sh  rebuild.sh  run-all-benchmarks.sh  run-colored-benchmarks.sh  setup-bench.sh  slurm-colored-script.sh  slurm-script.sh
canonical-kmers/: Cargo.toml
canonical-kmers/src/: lib.rs
config/: benchmarks.toml  local.example.toml  local.toml  tools.toml
datasets-download/: README.md  gut-ftp.txt
src/: config.rs  dataset_stats.rs  dir_cleanup.rs  main.rs  runner.rs  stats.rs  table_maker.rs
